Created thread version of server, and separated serial version in different file.Thread version works fine, but PlayerLogic function needs to be split into smaller functions for each subfunctionality.

--- a/makefile.server
+++ b/makefile.server
@@ -6,7 +6,7 @@ SRCDIR = src
 ODIR = obj
 LDIR = lib
 
-LIBS=-lm
+LIBS=-lm -lpthread
 
 _DEPS = config.h message.h
 DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
